# HNO-VIO

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/PennCOSYVIO/: kalibr_imucam_chain.yaml
config/euroc_mav/: estimator_config.yaml
config/realsense/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
docs/: history0623.md  history0624.md  history0625.md  hno_rtabmap_plan.md  rtabmap_optimization_formula.md  wang algorithm.md
eval/: .latest_case009_guarded  .latest_recheck_case3_case9  .latest_simple_model_validation
eval/00-V1_01_easy_20260623T185347Z_smoke/: best_candidate.json
eval/00-V1_01_easy_20260623T185347Z_smoke/case_001/: odom.tum  params.json
eval/01-V1_01_easy_20260623T185715Z/case_001/: collector_status.json  odom.csv  summary.md
eval/01-V1_01_easy_20260623T185715Z/case_002/: estimator_config.yaml  params.json  summary.json
eval/01-V1_01_easy_20260623T185715Z/case_003/: collector_status.json  odom.csv  params.json  summary.json
eval/01-V1_01_easy_20260623T185715Z/case_004/: estimator_config.yaml  params.json  summary.md
eval/01-V1_01_easy_20260623T185715Z/case_005/: odom.tum  summary.md
eval/01-V1_01_easy_20260623T185715Z/case_006/: odom.csv  odom.tum
eval/01-V1_01_easy_20260623T185715Z/case_008/: estimator_config.yaml  params.json  summary.json
eval/01-V1_01_easy_20260623T185715Z/case_009/: collector_status.json  params.json  summary.md
eval/01-V1_01_easy_20260623T185715Z/case_010/: collector_status.json  estimator_config.yaml  params.json  summary.json  summary.md
eval/01-V1_01_easy_20260623T185715Z/case_011/: estimator_config.yaml  odom.csv  params.json  summary.json
eval/01-V1_01_easy_20260623T185715Z/case_012/: collector_status.json  odom.tum  params.json  summary.json
eval/01-V1_01_easy_20260623T185715Z/case_013/: estimator_config.yaml  summary.md
eval/01-V1_01_easy_20260623T185715Z/case_014/: estimator_config.yaml  odom.csv  params.json
eval/01-V1_01_easy_20260623T185715Z/case_015/: odom.tum  summary.json
eval/01-V1_01_easy_20260623T185715Z/case_016/: estimator_config.yaml  odom.tum  summary.json  summary.md
eval/01-V1_01_easy_20260623T185715Z/case_017/: summary.md
eval/01-V1_01_easy_20260623T185715Z/case_018/: odom.csv  summary.json  summary.md
eval/01-V1_01_easy_20260623T185715Z/case_019/: odom.tum  params.json  summary.json
eval/01-V1_01_easy_20260623T185715Z/case_020/: odom.tum  summary.md
eval/01-V1_01_easy_20260623T185715Z/case_021/: estimator_config.yaml  params.json
eval/01-V1_01_easy_20260623T185715Z/case_022/: odom.csv  odom.tum  params.json  summary.json  summary.md
eval/01-V1_01_easy_20260623T185715Z/case_023/: summary.json
eval/01-V1_01_easy_20260623T185715Z/case_024/: collector_status.json  params.json  summary.json  summary.md
eval/01-V1_01_easy_20260623T185715Z/case_025/: collector_status.json  odom.csv  summary.md
eval/01-V1_01_easy_20260623T185715Z/case_026/: estimator_config.yaml  params.json  summary.json
eval/01-V1_01_easy_20260623T185715Z/case_027/: odom.csv  params.json
eval/01-V1_01_easy_20260623T185715Z/case_028/: summary.md
eval/01-V1_01_easy_20260623T185715Z/case_029/: params.json
eval/01-V1_01_easy_20260623T185715Z/case_030/: estimator_config.yaml  odom.csv  odom.tum  params.json
eval/01-V1_01_easy_20260623T185715Z/case_031/: collector_status.json  odom.csv  summary.json  (+1 more)
eval/04-V1_01_easy_case009_guarded_20260624T025617Z/: manifest.jsonl
eval/V1_01_easy_20260623T185347Z_smoke/: manifest.jsonl
eval/V1_01_easy_20260623T185715Z/: best_candidate.json  manifest.jsonl
eval/V1_01_easy_case009_guarded_20260624T025617Z/: best_candidate.json  case009_guarded_001_candidate.json
eval/V1_01_easy_simple_model_validation_20260624T021238Z/: validation_result.json
eval/reports/: 04-V1_01_easy_case009_guarded_20260624T025617Z_final.md  V1_01_easy_20260623T185347Z_smoke.md  V1_01_easy_20260623T185715Z_final.md  V1_01_easy_20260623T185715Z_round_010.md  V1_01_easy_20260623T185715Z_round_020.md  V1_01_easy_20260623T185715Z_round_030.md  V1_01_easy_20260623T185715Z_round_040.md  V1_01_easy_20260623T185715Z_round_050.md  V1_01_easy_recheck_case3_case9_20260624T014235Z.md  V1_01_easy_simple_model_validation_20260624T021238Z_final.md
include/hno_vio/: HNOFeature.h  HNOInitializer.h  HNOManager.h  HNOPropagator.h  HNOState.h  HNOUpdater.h
launch/: euroc_hno.launch  hno.rviz  realsense_hno.launch
ov_eval/launch/: record.launch
ov_hno/: CMakeLists.txt  README.md  package.xml
ov_hno/launch/: hno.rviz  subscribe_hno.launch
ov_hno/src/: HNOFeature.cpp  HNOFeature.h  HNOFeatureGT.cpp  HNOFeatureGT.h  HNOInitializer.cpp  HNOInitializer.h  HNOManager.cpp  HNOManager.h  HNOManagerGT.cpp  HNOManagerGT.h  HNOPropagator.cpp  HNOPropagator.h  HNOState.h  HNOUpdater.cpp  HNOUpdater.h  HNOUpdater_v2.cpp  run_subscribe_hno.cpp  temp.cpp  temp.h
ov_msckf/launch/: display.rviz  subscribe_realsense.launch
results/run_20260625T120152/: run_context.json
results/run_20260625T211722/: run_context.json
src/: HNOFeature.cpp  HNOInitializer.cpp  HNOManager.cpp  HNOPropagator.cpp  HNOUpdater.cpp  run_hno_vio.cpp
success_odom/case009_baseline_repeat_2/: odom.csv  odom.tum  params.json  summary.json
success_odom/case009_guarded_001/: odom.tum  params.json
success_odom/case009_guarded_014/: odom.csv  odom.tum
success_odom/case009_guarded_020/: odom.csv  odom.tum  summary.json
tools/run_rtabmap/: README.md
tools/run_rtabmap/ros2_ws/src/hno_rtabmap_replay/: package.xml  setup.cfg  setup.py
tools/run_rtabmap/ros2_ws/src/hno_rtabmap_replay/hno_rtabmap_replay/: euroc_utils.py  eval_raw_vs_optimized.py  export_optimized_tf.py  odom_utils.py  prepare_odom.py  replay_node.py  rtabmap_diagnostics.py  tf_utils.py
tools/run_rtabmap/ros2_ws/src/hno_rtabmap_replay/launch/: replay_case009.launch.py  rtabmap_case009.launch.py
tools/run_vio/: analyze_case.py  collect_run.py  common.sh  generate_case009_guarded_manifest.py  generate_manifest.py  make_report.py  materialize_candidate.py  run_auto_converge.sh  run_case.sh  run_replay_best.sh  run_smoke.sh
(+937 files in other folders)
