<?xml version="1.0"?>
<package format="3">
  <name>hno_vio</name>
  <version>1.0.0</version>
  <description>Standalone Hybrid Nonlinear Observer visual-inertial odometry package.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>tf</depend>
  <depend>eigen</depend>
  <depend>libopencv-dev</depend>

  <exec_depend>rosbag</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
