<?xml version="1.0"?>
<package format="3">
    <name>ov_hno</name>
    <version>1.0.0</version>
    <description>Hybrid Nonlinear Observer (HNO) for OpenVINS</description>
    <maintainer email="user@example.com">User</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>message_filters</depend>
    <depend>tf</depend>
    <depend>ov_core</depend>
    <depend>ov_init</depend>
    <depend>eigen</depend>
    <depend>libopencv-dev</depend>
</package>
