<?xml version="1.0"?>
<package format="3">
  <name>hno_rtabmap_replay</name>
  <version>0.0.1</version>
  <description>Offline EuRoC stereo replay with saved HNO-VIO odometry for RTAB-Map.</description>
  <maintainer email="sharpa@example.com">sharpa</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
